Update image credit class name

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,7 +12,7 @@ layout: base
     </div>
   {% endif %}
   {% if page.image-credit %}
-    <p class="caption">
+    <p class="image-credit">
       <a href="{{ page.image-credit }}" target="_blank">Photo credit</a> (Creative Commons)
     </p>
   {% endif %}
