--- a/_sass/components/_custom.scss
+++ b/_sass/components/_custom.scss
@@ -444,7 +444,7 @@ body:not(.page-home) {
 
 // Single project page ------------- //
 
-.caption {
+.image-credit {
   color: $color-gray-medium;
   font-size: 1.2rem;
   margin-top: 4px;
