--- a/_sass/components/_custom.scss
+++ b/_sass/components/_custom.scss
@@ -454,6 +454,14 @@ body:not(.page-home) {
   margin-top: 4px;
 }
 
+.project-single-sidebar {
+  font-family: $font-sans;
+
+  h3 + p {
+    margin-top: 0;
+  }
+}
+
 // Team ------------- //
 
 .page-team {
