--- a/_sass/components/_custom.scss
+++ b/_sass/components/_custom.scss
@@ -457,7 +457,10 @@ body:not(.page-home) {
   color: $color-gray-medium;
   font-size: 1.2rem;
   margin-top: 4px;
-  min-height: 14px;
+
+  @include media($medium-screen) {
+    min-height: 14px;
+  }
 }
 
 .project-single-sidebar {
