--- a/_sass/components/_custom.scss
+++ b/_sass/components/_custom.scss
@@ -538,6 +538,10 @@ body:not(.page-home) {
     }
   }
 
+  input:focus + .usa-button-outline {
+      box-shadow: inset 0 0 0 2px $color-brand-dark-active, $focus-shadow;
+  }
+
   .usa-accordion-content {
     background-color: $color-brand-light;
     margin-top: 2px;
@@ -558,6 +562,10 @@ body:not(.page-home) {
 
     &:active {
       box-shadow: inset 0 0 0 2px $color-brand-dark-active;
+    }
+
+    &:focus {
+      box-shadow: inset 0 0 0 2px $color-brand-dark-active, $focus-shadow;
     }
   }
 
