--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -21,7 +21,7 @@ scripts:
 {% for team in site.team %}
   <div class="usa-width-one-half usa-media_block js-filterable" {% for filter in layout.filters %}
     data-{{ filter.key }}='{{ team[filter.key] | jsonify }}'{% endfor %}>
-    <div class="usa-media_block-img team-image" style="background-image: url({{ team.image | prepend: site.baseurl }});" role="image" aria-label="{{ team.name }}"></div>
+    <div class="usa-media_block-img team-image" style="background-image: url({{ team.image | prepend: site.baseurl }});" role="img" aria-label="{{ team.name }}"></div>
     <div class="usa-media_block-body">
       <h3>
         <a href="{{ site.baseurl }}{{ team.url | downcase }}">
