--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -1,3 +1,16 @@
+// Components --------- //
+@import "components/billboard";
+@import "components/contact";
+@import "components/filter";
+@import "components/hero";
+@import "components/layout";
+@import "components/filter";
 @import "components/logo";
+@import "components/navigation";
+@import "components/project-card";
+@import "components/project-single";
+@import "components/team";
 @import "components/typography";
+
+// Custom ------------ //
 @import "components/custom";
