--- a/_sass/components/_custom.scss
+++ b/_sass/components/_custom.scss
@@ -1,621 +1,2 @@
-// Typography ------------- //
+// Custom styles --------- //
 
-$font-body: $font-serif;
-$font-headings: $font-sans;
-$color-brand-dark-hover: darken($color-brand-dark, 10%);
-$color-brand-dark-active: darken($color-brand-dark, 20%);
-$display-kerning: -0.4px;
-
-html {
-  font-family: $font-body;
-}
-
-body {
-  font-size: 1.5rem;
-
-  @include media($medium-screen) {
-    font-size: $base-font-size;
-  }
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-.usa-logo,
-.usa-banner {
-  font-family: $font-headings;
-}
-
-h1 {
-  font-weight: $font-heavy;
-}
-
-.font-small {
-  font-size: $small-font-size;
-}
-
-.h4 {
-  font-size: $h4-font-size;
-}
-
-.usa-content {
-  p {
-    &:not(.usa-font-lead) {
-      max-width: 66ch;
-    }
-  }
-}
-
-// Layout ------------- //
-
-// Single column page
-.page-single-column {
-  .usa-content {
-    max-width: 66ch;
-  }
-}
-
-// Add top + bottom padding to main's
-body:not(.page-home) {
-  main {
-    @include padding(6rem null);
-  }
-}
-
-.background-medium {
-  background-color: $color-brand-medium;
-}
-
-.background-dark {
-  background-color: $color-gray-dark;
-}
-
-.background-medium,
-.background-dark {
-  color: $color-white;
-  -webkit-font-smoothing: antialiased;
-
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  p {
-    color: $color-white;
-  }
-
-  .section-heading {
-    color: $color-primary-alt;
-    letter-spacing: 0.5px;
-  }
-
-  h2 {
-    letter-spacing: 0.5px;
-  }
-
-  a {
-    color: $color-white;
-
-    &:hover {
-      color: $color-gray-light;
-
-      path {
-        fill: $color-gray-light;
-      }
-    }
-  }
-
-  input,
-  textarea,
-  select {
-    border-color: $color-white;
-  }
-}
-
-.background-light {
-  background-color: $color-brand-light;
-
-  .usa-button {
-    background-color: $color-brand-dark;
-  }
-}
-
-// Navigation ------------- //
-
-.usa-header-basic {
-  .usa-navbar {
-    @include media($nav-width) {
-      width: 370px;
-    }
-  }
-}
-
-.usa-navbar {
-  @include media($nav-width) {
-    height: 85px;
-    margin-bottom: 8px;
-  }
-}
-
-@mixin nav-border {
-  border-bottom: 0.4rem solid $color-brand;
-  padding-bottom: 1rem;
-}
-
-// Add correct current nav link style
-.usa-nav {
-  @include media($nav-width) {
-    padding-top: 3rem;
-  }
-
-  a {
-    &.usa-current {
-      border-left-color: $color-brand;
-
-      @include media($nav-width) {
-        border-left: 0;
-      }
-    }
-  }
-
-  .usa-current {
-    > span {
-      color: $color-base;
-
-      @include media($nav-width) {
-        @include nav-border;
-      }
-    }
-  }
-}
-
-.usa-nav-link {
-  &:hover {
-    span {
-      color: $color-base;
-
-      @include media($nav-width) {
-        @include nav-border;
-      }
-    }
-  }
-}
-
-// Fix navigation close button layout on mobile
-.usa-nav-primary {
-  display: inline-block;
-
-  > li {
-    > a {
-      @include media($nav-width) {
-        padding-bottom: 1.4rem;
-      }
-    }
-  }
-}
-
-
-// Hero feature ------------- //
-
-.usa-hero-callout {
-  h2 {
-    color: $color-white;
-    font-weight: $font-heavy;
-    letter-spacing: $display-kerning;
-  }
-
-  .usa-button {
-    background-color: $color-white;
-    color: $color-primary-darkest;
-    font-size: inherit;
-
-    &:hover {
-      background-color: rgba($color-white, 0.8);
-      color: $color-base;
-    }
-
-    &:active {
-      background-color: rgba($color-white, 0.6);
-    }
-  }
-
-  @include media($small-screen) {
-    max-width: 350px;
-  }
-}
-
-
-// Billboard ------------- //
-
-.billboard {
-  @include margin(2rem null);
-
-  .usa-media_block-img {
-    display: none;
-    margin-right: 26px;
-    margin-top: 21px;
-
-    @include media($medium-screen) {
-      display: block;
-    }
-  }
-
-  .usa-button {
-    margin-top: 0;
-  }
-}
-
-.billboard-message {
-  color: #81848B;
-  font-family: $font-sans;
-  font-size: 38px;
-  font-weight: $font-bold;
-  letter-spacing: $display-kerning;
-  line-height: $heading-line-height;
-  max-width: 720px;
-
-  p {
-    line-height: 1.3;
-    margin-top: 0;
-  }
-
-  em {
-    color: $color-base;
-    font-style: normal;
-  }
-}
-
-.billboard-img {
-  @include media($medium-screen) {
-    @include span-columns(2);
-  }
-}
-
-.icon-gears {
-  @include media($medium-screen) {
-    display: block;
-    float: right;
-    width: 100%;
-  }
-}
-
-
-// Contact ------------- //
-
-.contact {
-  h2 {
-    margin-top: 0;
-  }
-
-  .usa-input-buttons-inline {
-    input {
-      margin-bottom: 0;
-    }
-  }
-
-  label {
-    font-family: $font-sans;
-    font-size: 17px;
-    font-weight: $font-bold;
-  }
-}
-
-.icon-twitter {
-  margin-right: 10px;
-}
-
-.usa-footer-logo-img {
-  @include media($medium-screen) {
-    float: right;
-    margin-top: -60px;
-  }
-}
-
-// Privacy policy
-
-.contact-form {
-  .usa-button {
-    @include media($medium-screen) {
-      margin-bottom: 0;
-      margin-top: 0.2em;
-    }
-
-    &:hover {
-      background-color: $color-brand-dark-hover;
-    }
-
-    &:active {
-      background-color: $color-brand-dark-active;
-    }
-  }
-}
-
-.contact-input {
-  @include media($medium-screen) {
-    float: left;
-    margin-right: 10px;
-    width: calc(100% - 186px);
-  }
-}
-
-.privacy-policy {
-  @include media($medium-screen) {
-    border-left: 1px solid $color-brand-tint;
-    padding-bottom: 3rem;
-    padding-left: 3rem;
-  }
-
-  * {
-    color: $color-brand-dark;
-  }
-}
-
-.icon-privacy {
-  margin-top: 3rem;
-}
-
-
-// Project page ------------- //
-
-.page--banner {
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  min-height: 300px;
-  width: 100%;
-}
-
-
-// Project card ------------- //
-
-.project-container {
-  @include media($medium-screen) {
-    display: flex;
-    flex-wrap: wrap;
-    width: 102.5%;
-  }
-}
-
-// Sets a height on projects so they're the same height and don't break the grid
-.project--card {
-  box-shadow: 0 0 0 1px $color-gray-lighter;
-  display: block;
-  margin-bottom: 3rem;
-  text-decoration: none;
-
-  @include media($medium-screen) {
-    display: flex;
-    flex-direction: column;
-    margin-right: 2.3%;
-    min-height: 450px;
-    width: 31%;
-  }
-
-  &:hover {
-    box-shadow: 0 0 0 1px $color-primary;
-  }
-
-  &:active {
-    box-shadow: $focus-shadow;
-  }
-}
-
-.project--banner {
-  @include margin(3rem);
-
-  @include media($medium-screen) {
-    flex: 1 0 auto;
-  }
-}
-
-.project--image {
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  min-height: 200px;
-  width: 100%;
-}
-
-.project--description.project--description {
-  color: $color-primary;
-  margin-top: 0;
-}
-
-.project--summary {
-  color: $color-base;
-  font-size: 16px;
-  margin-bottom: 0;
-
-  em {
-    font-style: normal;
-  }
-}
-
-.project--read {
-  @include margin(0 3rem null 3rem);
-  color: $color-primary;
-  font-size: $small-font-size;
-  font-weight: bold;
-  padding-bottom: 3rem;
-
-  svg {
-    display: inline-block;
-    height: 1.2rem;
-    margin-bottom: -1px;
-    width: 1.2rem;
-    margin-left: 4px;
-  }
-}
-
-// Single project page ------------- //
-
-.image-credit {
-  color: $color-gray-medium;
-  font-size: 1.2rem;
-  margin-top: 4px;
-
-  @include media($medium-screen) {
-    min-height: 14px;
-  }
-}
-
-.project-single-sidebar {
-  font-family: $font-sans;
-
-  h3 + p {
-    margin-top: 0;
-  }
-}
-
-// Team ------------- //
-
-.page-team {
-  .usa-graphic_list {
-    .usa-media_block {
-      margin-bottom: 6rem;
-
-      @include media($medium-screen) {
-        margin-right: 0;
-        width: 50%;
-      }
-    }
-
-    h3 {
-      margin-top: 0;
-    }
-  }
-}
-
-.team-image {
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  clip-path: circle(62px at center);
-  height: 124px;
-  width: 124px;
-}
-
-.page-team-single {
-  .team-image {
-    clip-path: circle(150px at center);
-    height: 300px;
-    width: 300px;
-  }
-}
-
-// Filter ------------- //
-.filter {
-  margin-bottom: 6rem;
-
-  > li {
-    background-color: $color-white;
-  }
-
-  li {
-    @include media($small-screen) {
-      display: inline-block;
-    }
-  }
-
-  .usa-accordion-button {
-    background-color: $color-brand-light;
-    color: $color-brand-dark;
-
-    p {
-      margin: 0;
-    }
-
-    &:hover {
-      background-color: $color-brand-dark;
-
-      p {
-        color: $color-white;
-      }
-    }
-  }
-
-  .usa-accordion-content {
-    background-color: $color-brand-light;
-    margin-top: 2px;
-    padding: 0;
-  }
-
-  .usa-button-outline {
-    background-color: transparent;
-    box-shadow: inset 0 0 0 2px $color-brand-dark;
-    color: $color-brand-dark;
-    font-weight: $font-bold;
-
-    &:hover {
-      background-color: transparent;
-      box-shadow: inset 0 0 0 2px $color-brand-dark-hover;
-      color: $color-brand-dark-hover;
-    }
-
-    &:focus {
-     box-shadow: inset 0 0 0 2px $color-brand-dark, $focus-shadow;
-    }
-
-    &:active {
-     box-shadow: inset 0 0 0 2px $color-brand-dark-hover, $focus-shadow;
-    }
-  }
-
-  [type=radio]:checked + label {
-    background-color: $color-brand-dark;
-    color: $color-white;
-
-    &:hover {
-      background-color: $color-brand-dark-hover;
-    }
-  }
-
-  input:focus + .usa-button-outline {
-      box-shadow: $focus-shadow;
-  }
-
-  label:before {
-    display: none;
-  }
-
-  input {
-    height: 0;
-    position: relative;
-  }
-}
-
-.filter-button-title {
-  font-size: 24px;
-}
-
-.filter-button-message {
-  color: $color-base;
-  font-family: $font-serif;
-  font-weight: $font-normal;
-  font-size: $small-font-size;
-}
-
-.filter-section {
-  border-bottom: 2px solid $color-white;
-  clear: left;
-  padding: 2.1rem 3rem;
-}
-
-.filter-category {
-  font-size: $base-font-size;
-  font-weight: $font-bold;
-  margin-bottom: 7px;
-  margin-top: 7px;
-}
-
-.filter-selection {
-  overflow: hidden;
-
-  button {
-    @include margin(5px 6px 5px null);
-  }
-}
