--- a/_sass/components/_layout.scss
+++ b/_sass/components/_layout.scss
@@ -14,6 +14,14 @@ body:not(.page-home) {
   }
 }
 
+.page--banner {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 300px;
+  width: 100%;
+}
+
 .background-medium {
   background-color: $color-brand-medium;
 }
