Add title bar to page template

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="usa-footer usa-footer-medium usa-section background-dark" role="contentinfo">
+<footer class="usa-footer usa-footer-medium usa-section background-gray-dark" role="contentinfo">
   <div class="usa-grid">
     <h2>Drop us a line.</h2>
     <p>To share your thoughts, email us any time at <a href="mailto:{{ site.footer.email }}">{{ site.footer.email }}</a>.</p>
@@ -8,6 +8,5 @@
     {% if site.footer.image %}
       <img class="usa-footer-logo-img" src="{{ site.footer.image | prepend: site.baseurl }}" alt="GSA">
     {% endif %}
-
   </div>
 </footer>
