--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,8 +2,12 @@
 layout: base
 ---
 
-<div class="usa-grid usa-content" id="main">
-  <h1>{{ page.title }}</h1>
+<div class="usa-section background-brand-dark">
+  <div class="usa-grid">
+    <h1>{{ page.title }}</h1>
+  </div>
+</div>
+<div class="usa-grid usa-content main-content" id="main">
   {% if page.image and page.image_full %}
     <img src="{{ page.image | prepend: site.baseurl }}" alt="{{ page.image_alt_text }}">
   {% elsif page.image %}
