Add new layout to single team page

--- a/_layouts/project-single.html
+++ b/_layouts/project-single.html
@@ -13,8 +13,7 @@ class: page-project-single
   <p class="billboard-message">{{ page.summary }}</p>
   {{ content }}
 </div>
-
-<div class="usa-width-one-third project-single-sidebar">
+<div class="usa-width-one-third single-sidebar">
 {% if page.year %}
   <h3 class="h4">Year</h3>
   <p>{{ page.year }}</p>
