--- a/_sass/components/_layout.scss
+++ b/_sass/components/_layout.scss
@@ -85,3 +85,16 @@ body:not(.page-home) {
     background-color: $color-brand-dark;
   }
 }
+
+.single-sidebar {
+  font-family: $font-sans;
+
+  h3 + p {
+    margin-top: 0;
+  }
+
+  h3 {
+    color: $color-primary-darker;
+  }
+}
+
