--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -1,3 +1,6 @@
+// Mixins ------------- //
+@import "components/mixins";
+
 // Components --------- //
 @import "components/billboard";
 @import "components/contact";
