--- a/_sass/components/_team.scss
+++ b/_sass/components/_team.scss
@@ -1,5 +1,15 @@
 // Team ------------- //
 
+// Mixins
+@mixin image-circle($width) {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  clip-path: circle(($width / 2) at center);
+  height: $width;
+  width: $width;
+}
+
 .page-team {
   .usa-graphic_list {
     .usa-media_block {
