--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -7,6 +7,7 @@ filters:
     title: Domain
   - key: agency
     title: Agency collaborator
+    multiple: true
   - key: impact
     title: Government impact
 scripts:
