--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,7 +4,15 @@
     <article class="card usa-width-one-third js-filterable" {% for filter in layout.filters %}
     data-{{ filter.key }}='{{ project[filter.key] | jsonify | xml_escape }}'{% endfor %}>
       <a class="card-link" href="{{ project.url | downcase | prepend: site.baseurl }}" aria-hidden="true" tabindex="-1"></a>
-      <div class="card-image" style="background-image: url({{ project.image | prepend: site.baseurl }});"></div>
+      <div class="card-image"
+        style="background-image: url(
+        {% if project.image_thumbnail %}
+          {{ project.image_thumbnail | prepend: site.baseurl }}
+        {% else %}
+          {{ project.image | prepend: site.baseurl }}
+        {% endif %}
+        );">
+      </div>
       <div class="card-banner">
         <h3 class="card-description">
           <span>{{ project.title }}</span>
