Remove downcase from permalink

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -25,7 +25,7 @@ scripts:
     <div class="usa-media_block-img team-image" style="background-image: url({{ team.image | prepend: site.baseurl }});" role="image" aria-label="{{ team.name }}"></div>
     <div class="usa-media_block-body">
       <h3>
-        <a href="{{ site.baseurl }}{{ team.url | downcase }}">
+        <a href="{{ site.baseurl }}{{ team.url }}">
           {{ team.name }}
         </a>
       </h3>
