--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,7 +3,7 @@
   {% unless project.featured %}
     <article class="card usa-width-one-third js-filterable" {% for filter in layout.filters %}
     data-{{ filter.key }}='{{ project[filter.key] | jsonify | xml_escape }}'{% endfor %}>
-      <a class="card-link" href="{{ project.url | downcase | prepend: site.baseurl }}" aria-hidden="true" tabindex="-1"></a>
+      <a class="card-link" href="{{ project.url | prepend: site.baseurl }}" aria-hidden="true" tabindex="-1"></a>
       <div class="card-image"
         style="background-image: url(
         {% if project.image_thumbnail %}
@@ -19,7 +19,7 @@
         </h3>
         <p class="card-summary">{{ project.summary }}</p>
       </div>
-      <a class="card-read" href="{{ project.url | downcase | prepend: site.baseurl }}">
+      <a class="card-read" href="{{ project.url | prepend: site.baseurl }}">
         Read more
         <span class="usa-sr-only">about {{ project.title }}</span>
         {% include icons/arrow-right.svg %}
