let's see if this works!

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,6 +37,12 @@ layout: base
   </div>
 </section>
 
+<section class="usa-section background-dark">
+<iframe src="https://drive.google.com/file/d/0BxayWw6MbOYbTE8tSktGRFNlNGM/preview" width="640" height="480"></iframe>
+</section>
+
 <section class="usa-section background-light">
 {% include contact.html %}
 </section>
+
+
