--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,9 @@ layout: base
 </section>
 
 <section class="usa-section background-dark">
+    <div class="usa-grid">
 <iframe src="https://drive.google.com/file/d/0BxayWw6MbOYbTE8tSktGRFNlNGM/preview" width="640" height="480"></iframe>
+    </div>
 </section>
 
 <section class="usa-section background-light">
