--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,7 +8,7 @@
     <div class="usa-width-two-thirds contact-form">
       <form id="contact" action="{{ f.url }}">
         <h2>Keep tabs on OES.</h2>
-        <p>Sign up to receive updates on results releases and opportunities to work with the team by filling out our <a href="https://goo.gl/forms/R5GABc7qkB35JMkH2">interest form</a>.</p>
+        <p>Sign up to receive updates on results releases and opportunities to work with the team by filling out our interest form.</p>
         {% for field in f.fields %}
           {% unless field.type == 'hidden' %}
             <label for="contact-{{ field.name }}">{{ field.label }}</label>
