change usa-logo color

--- a/_sass/components/_logo.scss
+++ b/_sass/components/_logo.scss
@@ -1,6 +1,7 @@
 .usa-header-basic {
   .usa-logo {
     width: calc(100% - 58px - 1.5rem);
+    color: #81848B;
 
     @include media($nav-width) {
       bottom: 12px;
