--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,13 +37,13 @@ layout: base
   </div>
 </section>
 
-<section class="usa-section background-dark">
-    <div class="usa-grid">
-<iframe src="https://drive.google.com/file/d/0BxayWw6MbOYbTE8tSktGRFNlNGM/preview" width="640" height="480"></iframe>
-    </div>
-  {% if page.content-button-link %}
+<section class="usa-section background-brand-dark">
+  <div class="usa-grid">
+      <iframe src="https://drive.google.com/file/d/0BxayWw6MbOYbTE8tSktGRFNlNGM/preview" width="640" height="480"></iframe>
+    {% if page.content-button-link %}
       <a href="{{ page.video-button-link | prepend: site.baseurl }}" class="usa-button usa-button-big">{{ page.video-button-text }}</a>
     {% endif %}
+   </div>
 </section>
 
 <section class="usa-section background-light">
