move button around a bit

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,8 +38,9 @@ layout: base
 </section>
 
 <section class="usa-section background-brand-dark">
-  <div class="usa-grid">
+  <div class="usa-grid" align="center">
       <iframe src="https://drive.google.com/file/d/0BxayWw6MbOYbTE8tSktGRFNlNGM/preview" width="640" height="480"></iframe>
+    <br>
     {% if page.content-button-link %}
       <a href="{{ page.video-button-link | prepend: site.baseurl }}" class="usa-button usa-button-big">{{ page.video-button-text }}</a>
     {% endif %}
