add footer import command

--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -6,6 +6,7 @@
 @import "components/card";
 @import "components/contact";
 @import "components/filter";
+@import "components/footer";
 @import "components/hero";
 @import "components/layout";
 @import "components/filter";
