add wrapper to import

--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -12,6 +12,8 @@
 @import "components/logo";
 @import "components/navigation";
 @import "components/project-single";
+@import "components/wrapper";
+
 
 // Pages --------- //
 @import "pages/projects";
